--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Relayer"
+      content="A permanent archival storage service for Polkadot and Kusama | Powered by the Subspace Network"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Subspace Relayer | v 0.1.0</title>
+    <title>
+      Subspace Relayer | A permanent archival storage service for Polkadot and
+      Kusama
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
