--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="A permanent archival storage service for Polkadot and Kusama | Powered by the Subspace Network"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      Subspace Relayer | A permanent archival storage service for Polkadot and
-      Kusama
+      Subspace Relayer | A permanent archival storage service for Polkadot and Kusama
     </title>
   </head>
   <body>
